<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
 
  <groupId>ltr</groupId>
  <artifactId>LTR</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
 
  <name>Lucene for TREC</name>
  <url>https://github.com/sauparna/LTR</url>

  <dependencies>

    <!-- Lucene stuff. -->
    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-analyzers-common</artifactId>
      <version>5.4.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-core</artifactId>
      <version>5.4.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-queryparser</artifactId>
      <version>5.4.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-highlighter</artifactId>
      <version>5.4.0</version>
    </dependency>
    

    <!-- HTML parsing. -->
    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>1.8.3</version>
    </dependency>

    <!-- IO utils. -->
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.4.0</version>
    </dependency>

    <!-- bzip2 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-compress</artifactId>
      <version>1.11</version>
    </dependency>

    <!-- WARC parsing. -->
    <dependency>
      <groupId>org.jwat</groupId>
      <artifactId>jwat-warc</artifactId>
      <version>1.0.4</version>
    </dependency>
    <dependency>
      <groupId>org.jwat</groupId>
      <artifactId>jwat-common</artifactId>
      <version>1.0.4</version>
    </dependency>

    <!-- To parse config files. -->
    <dependency>
      <groupId>org.hjson</groupId>
      <artifactId>hjson</artifactId>
      <version>1.1.4</version>
    </dependency>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.6.2</version>
    </dependency>


  </dependencies>


  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.basedir}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.6</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.basedir}/lib</outputDirectory>
              <finalName>LTR</finalName>
              <archive>
                <manifest>
                  <mainClass>IndexTREC</mainClass>
                  <addClasspath>true</addClasspath>
                </manifest>
              </archive>
            </configuration>
          </execution>
        </executions>
      </plugin>      

    </plugins>
  </build>
</project>
